--- a/templates/summary.html
+++ b/templates/summary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Text Summarizer</title>
+    <title>Analyse - Summify</title>
     <link rel="stylesheet" href="/static/style_summ.css">
 </head>
 <body>
