--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - AI Text Summarizer</title>
+    <title>About - Summify</title>
     <link rel="stylesheet" href="/static/style_about.css"> 
 </head>
 <body>
