--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Summify</title>
     <link rel="stylesheet" href="/static/style_about.css"> 
+    <link rel="icon" href="/resources/favicon.png">
+
 </head>
 <body>
     <div class="container">
