--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summify</title>
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="icon" href="/resources/favicon.png">
+
 </head>
 <body>
     <div class="container">
