--- a/static/style_summ.css
+++ b/static/style_summ.css
@@ -292,7 +292,7 @@ button, textarea {
 }
 
 .copy-button {
-    margin-left: 270px;
+    margin-left: 57%;
     padding: 8px;
     border-radius: 8px;
     border: none;
