--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="/resources/favicon.png">
 </head>
 <body>
+    <div id="loading-screen" style="display:none;">
+        <div class="spinner"></div>
+    </div>
     <div class="container">
         <div class="header">
             <h1>AI Text Summarizer</h1>
@@ -20,7 +23,7 @@
             <div class="textarea-wrapper">
                 <textarea id="myTextarea" name="rawtext" class="form-control", rows=3 placeholder="Enter your text here..."></textarea>
                 <div class="button-group">
-                    <button class="summarize-btn">
+                    <button id="summarize-button" type="submit" class="summarize-btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"/>
                         </svg>
@@ -66,6 +69,11 @@
         </div>
     </nav>
     <script>
+        document.getElementById("summarize-button").addEventListener("click", function() {
+    document.getElementById("loading-screen").style.display = "flex";
+});
+
+
         const textarea = document.getElementById('myTextarea');
         const wordCountDisplay = document.getElementById('wordCount');
         const charCountDisplay = document.getElementById('charCount');
