--- a/static/style.css
+++ b/static/style.css
@@ -225,16 +225,42 @@ button, textarea {
     z-index: 9999;
 }
 
-.spinner {
-    border: 8px solid #f3f3f3;
-    border-top: 8px solid #3498db;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}
+.load {
+    height: 300px;
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  span {
+    height: 30px;
+    width: 30px;
+    border-radius: 100%;
+    background: #4361ee;
+    margin: 10px;
+    position: relative;
+  }
+.one, .two, .three, .four {
+    animation: ani 2s linear infinite;
+  }
+  
+  .two {
+        animation-delay: 0.3s;
+  }
+  
+  .three {
+        animation-delay: 0.6s;
+  }
+  
+  .four {
+        animation-delay: 0.9s;
+  }
+  
+  @keyframes ani {
+    20% {top: 0px;}
+    30% {top: -15px;}
+    50% {top: -45px;}
+    70% {top: 15px;}
+    80% {top: 0px;}
+  }
