--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <div id="loading-screen" style="display:none;">
-        <div class="spinner"></div>
+        <div class="load">
+            <span class="one"></span>
+            <span class="two"></span>
+            <span class="three"></span>
+            <span class="four"></span>
+          </div>
     </div>
     <div class="container">
         <div class="header">
