--- a/templates/summary.html
+++ b/templates/summary.html
@@ -35,6 +35,7 @@
 
                     <div class="translation-controls">
                         <select id="languageSelect">
+                            <option value="" disabled selected>Select a language</option>
                             <option value="en">English</option>
                             <option value="es">Spanish</option>
                             <option value="fr">French</option>
