--- a/templates/summary.html
+++ b/templates/summary.html
@@ -53,18 +53,15 @@
                         <option value="zh">Chinese</option>
                         <option value="hi">Hindi</option>
                     </select>
-                    <button id="translateButton" class="btn">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                            <path d="M12 2L2 22l20-10-10-10zM12 22l-3-3"/>
-                        </svg>
+                 <div class="button-trans">
+                    <button id="translateButton" class="translatebtn">
                         Translate
                     </button>
-                    <button id="revertButton" class="btn">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                            <path d="M10 19l7-7-7-7M17 12H3"/>
-                        </svg>
+                    <button id="revertButton" class="Revertbtn">
                         Revert
                     </button>
+                 </div>
+                    
                 </div>
 
             </div>
