--- a/templates/summary.html
+++ b/templates/summary.html
@@ -39,7 +39,7 @@
             
             <div class="result-card">
                 <div class="translation-controls">
-                    <select id="languageSelect">
+                    <select id="languageSelect" class="langselect">
                         <option value="" disabled selected>Select a language</option>
                         <option value="en">English</option>
                         <option value="es">Spanish</option>
